desenv_tests/test-assets/struct/failure/prefix_wrong_usage_1.stderr
error: `prefix` modifier cannot be used as path. Usage: `#[desenv(prefix = "value")]`
 --> test-assets/struct/failure/prefix_wrong_usage_1.rs:4:10
  |
4 | #[desenv(prefix)]
  |          ^^^^^^
